@@ -363,6 +363,16 @@ COB_HIDDEN int		cob_ctoi		(const char);
 
 COB_HIDDEN struct cob_time cob_get_current_date_and_time	(void);
 
+#if 0 /* currently not used */
+COB_HIDDEN char		*cob_int_to_string		(int, char*);
+COB_HIDDEN char		*cob_int_to_formatted_bytestring	(int, char*);
+#endif
+COB_HIDDEN char		*cob_strcat		(char*, char*);
+COB_HIDDEN char		*cob_strjoin		(char**, int, char*);
+
+COB_HIDDEN int		cob_min_int		(const int, const int);
+COB_HIDDEN int		cob_max_int		(const int, const int);
+
 #ifdef __cplusplus
 }
 #endif
